--- a/templates/sidebar.html.twig
+++ b/templates/sidebar.html.twig
@@ -3,7 +3,7 @@
     <nav class="navbar topnavbar">
         <!-- START navbar header-->
         <div class="navbar-header"><a class="navbar-brand" href="#/">
-                <div class="brand-logo"><img class="img-fluid" src="{{ asset('img/logo.jpg') }}" alt="App Logo"></div>
+                <div class="brand-logo"><img class="img-fluid" src="{{ asset('img/logo.png') }}" alt="App Logo"></div>
                 <div class="brand-logo-collapsed"><img class="img-fluid" src="img/logo-single.png" alt="App Logo"></div>
             </a></div><!-- END navbar header-->
         <!-- START Left navbar-->
