--- a/templates/offsidebar.html.twig
+++ b/templates/offsidebar.html.twig
@@ -10,12 +10,24 @@
                         <div class="item user-block">
                             <!-- User picture-->
                             <div class="user-block-picture">
-                                <div class="user-block-status"><img class="img-thumbnail rounded-circle" src="{{ asset('img/user/02.jpg') }}" alt="Avatar" width="60" height="60">
+                                <div class="user-block-status"><img class="img-thumbnail rounded-circle" src="
+                                                                                                            {% if user.avatar %}
+                                                                                                                {{ asset(user.avatar) }}
+                                                                                                            {% else %}
+                                                                                                                {{ asset('img/user/02.jpg') }}
+                                                                                                            {% endif %}
+                                                                                                         " alt="Avatar" width="60" height="60">
                                     <div class="circle bg-success circle-lg"></div>
                                 </div>
                             </div><!-- Name and Job-->
                             <div class="user-block-info">
-                                <span class="user-block-name">Hello, {{ user.firstName }}</span>
+                                <span class="user-block-name">
+                                    {% if user.firstName %}
+                                        Hello, {{ user.firstName }}
+                                    {% else %}
+                                        Hello, Somebody
+                                    {% endif %}
+                                </span>
 {#                                <span class="user-block-role">Designer</span>#}
                             </div>
                         </div>
