fixed show orders of user / reorganization

--- a/templates/cabinet/profile/profile.html.twig
+++ b/templates/cabinet/profile/profile.html.twig
@@ -1,11 +1,11 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}{{'Dashboard'|trans }}{% endblock %}
+{% block title %}{{'Profile'|trans }}{% endblock %}
 
 {% block body %}
         <!-- top navbar-->
-        {{ include('sidebar.html.twig') }}      <!-- sidebar-->
-        {{ include('offsidebar.html.twig') }}   <!-- offsidebar-->
+        {{ include('cabinet/sidebar.html.twig') }}      <!-- sidebar-->
+        {{ include('cabinet/offsidebar.html.twig') }}   <!-- offsidebar-->
 
         <section class="section-container">
             <!-- Page content-->
@@ -59,16 +59,16 @@
                                                 <div class="col-xl-10 col-md-9 col-8"><input class="form-control" id="inputContact3" type="text" value="{{ user.phone }}"></div>
                                             </div>
                                             <div class="form-group row"><label class="text-bold col-xl-2 col-md-3 col-4 col-form-label text-right" for="inputContact4">{{'ZIP'|trans }}</label>
-                                                <div class="col-xl-10 col-md-9 col-8"><input class="form-control" id="inputContact4" type="text" value="{{ user.zip }}"></div>
+                                                <div class="col-xl-10 col-md-9 col-8"><input class="form-control" id="inputContact4" type="text" value="{{ my_address[0].zip }}"></div>
                                             </div>
                                             <div class="form-group row"><label class="text-bold col-xl-2 col-md-3 col-4 col-form-label text-right" for="inputContact5">{{'Country'|trans }}</label>
-                                                <div class="col-xl-10 col-md-9 col-8"><input class="form-control" id="inputContact5" type="text" value="{{ user.country }}"></div>
+                                                <div class="col-xl-10 col-md-9 col-8"><input class="form-control" id="inputContact5" type="text" value="{{ my_address[0].country }}"></div>
                                             </div>
                                             <div class="form-group row"><label class="text-bold col-xl-2 col-md-3 col-4 col-form-label text-right" for="inputContact6">{{'City'|trans }}</label>
-                                                <div class="col-xl-10 col-md-9 col-8"><input class="form-control" id="inputContact6" type="text" value="{{ user.city }}"></div>
+                                                <div class="col-xl-10 col-md-9 col-8"><input class="form-control" id="inputContact6" type="text" value="{{ my_address[0].city }}"></div>
                                             </div>
                                             <div class="form-group row"><label class="text-bold col-xl-2 col-md-3 col-4 col-form-label text-right" for="inputContact7">{{'Address'|trans }}</label>
-                                                <div class="col-xl-10 col-md-9 col-8"><textarea class="form-control" id="inputContact7" rows="4">{{ user.address }}</textarea></div>
+                                                <div class="col-xl-10 col-md-9 col-8"><textarea class="form-control" id="inputContact7" rows="4">{{ my_address[0].address }}</textarea></div>
                                             </div>
                                         </form>
                                     </div>
@@ -79,6 +79,6 @@
                 </div>
             </div>
         </section><!-- Page footer-->
-        {{ include('footer.html.twig') }}
+        {{ include('cabinet/footer.html.twig') }}
 {% endblock %}
  {% block javascripts %}{% endblock %}
