--- a/templates/cabinet/sidebar.html.twig
+++ b/templates/cabinet/sidebar.html.twig
@@ -13,8 +13,8 @@
         <ul class="navbar-nav flex-row">
             <!-- Search icon-->
             <li class="nav-item"><a class="nav-link" href="#" data-search-open=""><em class="icon-magnifier"></em></a></li><!-- Fullscreen (only desktops)-->
-            <li class="nav-item d-none d-md-block">
-                <a class="nav-link" id="user-block-toggle" href="#user-block" data-toggle="collapse"><em class="icon-user"></em></a></li>
+{#            <li class="nav-item d-none d-md-block">#}
+{#                <a class="nav-link" id="user-block-toggle" href="#user-block" data-toggle="collapse"><em class="icon-user"></em></a></li>#}
         </ul><!-- END Right Navbar-->
         <!-- START Search form-->
         <form class="navbar-form" role="search" action="search.html">
