--- a/templates/cabinet/addresses/addresses.html.twig
+++ b/templates/cabinet/addresses/addresses.html.twig
@@ -4,8 +4,8 @@
 
 {% block body %}
         <!-- top navbar-->
-        {{ include('sidebar.html.twig') }}      <!-- sidebar-->
-        {{ include('offsidebar.html.twig') }}   <!-- offsidebar-->
+        {{ include('cabinet/sidebar.html.twig') }}      <!-- sidebar-->
+        {{ include('cabinet/offsidebar.html.twig') }}   <!-- offsidebar-->
 
         <aside class="offsidebar d-none">
         </aside><!-- Main section-->
@@ -21,10 +21,10 @@
                                 <div class="col-lg-12">
                                     <h4>{{ user.firstName }} {{ user.lastName }}</h4>
                                     <address>
-                                        {{ user.address }} <br>
-                                        {{ user.city }} <br>
-                                        {{ user.country }} <br>
-                                        {{ user.zip }}
+                                        {{ my_address[0].address }} <br>
+                                        {{ my_address[0].city }} <br>
+                                        {{ my_address[0].country }} <br>
+                                        {{ my_address[0].zip }}
                                     </address>
                                 </div>
                             </div>
@@ -146,6 +146,6 @@
                 </div>
             </div>
         </section><!-- Page footer-->
-        {{ include('footer.html.twig') }}
+        {{ include('cabinet/footer.html.twig') }}
 {% endblock %}
  {% block javascripts %}{% endblock %}
