--- a/templates/cabinet/offsidebar.html.twig
+++ b/templates/cabinet/offsidebar.html.twig
@@ -34,15 +34,25 @@
                     </div>
                 </li><!-- END user info-->
                 <!-- Iterates over all sidebar items-->
-                <li class="nav-heading "><span data-localize="sidebar.heading.HEADER">Main Navigation</span></li>
+                <li class="nav-heading "><span data-localize="sidebar.heading.HEADER">{{'Main Navigation'|trans }}</span></li>
                 <li class=" ">
                     <a href="{{ path('post_profile') }}" title="Profile">
-                        <em class="icon-grid"></em><span data-localize="sidebar.nav.PROFILE">Profile</span>
+                        <em class="icon-grid"></em><span data-localize="sidebar.nav.PROFILE">{{'Profile'|trans }}</span>
                     </a>
                 </li>
                 <li class=" ">
                     <a href="{{ path('post_dashboard') }}" title="Dashboard">
-                        <em class="icon-grid"></em><span data-localize="sidebar.nav.DASHBOARD">Dashboard</span>
+                        <em class="icon-grid"></em><span data-localize="sidebar.nav.DASHBOARD">{{'Dashboard'|trans }}</span>
+                    </a>
+                </li>
+                <li class=" ">
+                    <a href="{{ path('post_parcels') }}" title="Parcels">
+                        <em class="icon-grid"></em><span data-localize="sidebar.nav.PARCELS">{{'Parcels'|trans }}</span>
+                    </a>
+                </li>
+                <li class=" ">
+                    <a href="{{ path('post_addresses') }}" title="Addresses">
+                        <em class="icon-grid"></em><span data-localize="sidebar.nav.ADDRESSES">{{'Addresses'|trans }}</span>
                     </a>
                 </li>
             </ul><!-- END sidebar nav-->
