--- a/templates/security/forgot.html.twig
+++ b/templates/security/forgot.html.twig
@@ -38,5 +38,6 @@
                      </div>
                   </div>
                    <button class="btn btn-danger btn-block" type="submit">Reset</button>
+                   <a class="btn btn-block btn-secondary" href="{{url('user_login')}}">{{'Signup'|trans}}</a>
                </form>
 {% endblock %}
