--- a/templates/cabinet/sidebar/navbarright.html.twig
+++ b/templates/cabinet/sidebar/navbarright.html.twig
@@ -44,18 +44,18 @@
     <!-- END User menu-->
     <li class="nav-item dropdown dropdown-list">
             <a class="nav-link dropdown-toggle dropdown-toggle-nocaret" href="#" data-toggle="dropdown" style="max-height: 55px;">
-                <div class="row">
-                    <div class="col-md-4">
-                        <img class="img-fluid rounded-circle" src="
+                <div class="row" style="margin-top: -10px;">
+                    <div class="col-md-2">
+                        <img class="rounded-circle" src="
                             {% if user.avatar %}
                               {{ asset(user.avatar) }}
                             {% else %}
                                 {{ asset('img/user/02.jpg') }}
                             {% endif %}
-                           " alt="Avatar" width="60" height="60">
+                           " alt="Avatar" width="33" height="36" style="max-height: 33px;max-width: 36px;">
                     </div>
-                    <div class="col-md-8">
-                        <div class="row">
+                    <div class="col-md-10">
+                        <div class="row" >
                             <div class="col-md-12">
                                 {% if user.firstName %}
                                     {{ user.firstName }}
