--- a/templates/cabinet/addresses/addresses.html.twig
+++ b/templates/cabinet/addresses/addresses.html.twig
@@ -1,31 +1,47 @@
 {% extends 'cabinet/cabinet_layout.html.twig' %}
-
-{% block title %}{{'Addresses'|trans }}{% endblock %}
+    {% set title= 'Addresses' %}
+    {% if page_title is defined and page_title is not empty %}
+        {% set title=page_title %}
+    {% endif %}
+{% block title %}{{title|trans }}{% endblock %}
 
 {% block content %}
-                        <div class="col-xl-6">
+                        <div class="col-xl-12">
                             <!-- START card-->
                             <div class="card card-default">
-                                <div class="card-header"><div class="float-left badge badge-success">Пакунки (0)</div></div>
+                                <div class="card-header">
+                                    <a  href="{{ path('post_address_create') }}" class="float-left badge badge-primary">{{ 'Add Address' | trans }}
+                                    </a>
+                                </div>
                                 <div class="card-body">
                                     <!-- START table-responsive-->
                                     <div class="table-responsive">
                                         <table class="table table-striped table-bordered table-hover">
                                             <thead>
                                             <tr>
+                                               <th>{{ "User Name" | trans }}</th>
+                                               <th>{{ "Country" | trans }}</th>
+                                               <th>{{ "Adress" | trans }}</th>
                                                 <th></th>
-{#                                                <th>First Name</th>#}
-{#                                                <th>Last Name</th>#}
-{#                                                <th>Username</th>#}
                                             </tr>
                                             </thead>
                                             <tbody>
+                                            {% if items is defined and items is iterable  %}
+                                                {% for item in items %}
+                                                 <tr>
+                                                    <td>{{ item.fullName }}</td>
+                                                    <td>{{ item.country }}</td>
+                                                    <td>{{ item.fullAddress }}</td>
+                                                     <td><a  href="{{ path('post_address_edit',{"id":item.id}) }}" class="btn btn-success">{{ 'Edit Address' | trans }}
+                                                         </a></td>
+                                                 </tr>
+                                                {% endfor %}
+
+                                            {% else %}
                                             <tr>
-                                                <td>Нет покупок</td>
-{#                                                <td>Mark</td>#}
-{#                                                <td>Otto</td>#}
-{#                                                <td>@mdo</td>#}
+                                                <td colspan="3">Нет покупок</td>
                                             </tr>
+                                            {% endif %}
 {#                                            <tr>#}
 {#                                                <td>2</td>#}
 {#                                                <td>Jacob</td>#}
@@ -44,74 +60,6 @@
                                 </div>
                             </div><!-- END card-->
                         </div>
-                        <div class="col-xl-6">
-                            <!-- START card-->
-                            <div class="card card-default">
-                                <div class="card-header"><div class="float-left badge badge-success"> Вiдправлення (0)</div></div>
-                                <div class="card-body">
-                                    <!-- START table-responsive-->
-                                    <div class="table-responsive">
-                                        <table class="table table-striped table-bordered table-hover">
-                                            <thead>
-                                                <tr>
-                                                    <th>TN</th>
-                                                    <th>Comment</th>
-                                                    <th>Status</th>
-                                                </tr>
-                                            </thead>
-                                            <tbody>
 
-                                                {% if orders is defined %}
-                                                    {% for order in orders %}
-                                                        <tr>
-                                                            <td>{{ order.trackingNumber }}</td>
-                                                            <td>{{ order.comment }}</td>
-                                                            <td>{{ order.status }}</td>
-                                                        </tr>
-                                                    {% endfor %}
-                                                {% else %}
-                                                    <tr><td>Нет отправок</td></tr>
-                                                {% endif %}
-                                            </tbody>
-                                        </table>
-                                    </div><!-- END table-responsive-->
-                                </div>
-                            </div><!-- END card-->
-                        </div>
-                        <div class="col-xl-6">
-                            <!-- START card-->
-                            <div class="card card-default">
-                                <div class="card-header"><div class="float-left badge badge-success"> Последние платежи (2)</div></div>
-                                <div class="card-body">
-                                    <!-- START table-responsive-->
-                                    <div class="table-responsive">
-                                        <table class="table table-striped table-bordered table-hover">
-                                            <thead>
-                                            <tr>
-                                                <th>Номер рахунку</th>
-                                                <th>Способ оплаты</th>
-                                                <th>Итого</th>
-                                                <th>Статус</th>
-                                            </tr>
-                                            </thead>
-                                            <tbody>
-                                            <tr>
-                                                <td>123456</td>
-                                                <td>Card</td>
-                                                <td>8.00 USD</td>
-                                                <td>Оплачено</td>
-                                            </tr>
-                                            <tr>
-                                                <td>654321</td>
-                                                <td>Card</td>
-                                                <td>16.00 USD</td>
-                                                <td>Оплачено</td>
-                                            </tr>
-                                            </tbody>
-                                        </table>
-                                    </div><!-- END table-responsive-->
-                                </div>
-                            </div><!-- END card-->
-                        </div>
 {% endblock %}
  {% block javascripts %}{% endblock %}
