--- a/templates/cabinet/offsidebar.html.twig
+++ b/templates/cabinet/offsidebar.html.twig
@@ -64,11 +64,31 @@
                     and
                     page_id is not empty
                     and
-                    page_id =='post_addresses'
+                    page_id in ['post_addresses','post_address_create']
                 %} active {% endif %} ">
-                    <a href="{{ path('post_addresses') }}" title="Addresses">
-                        <em class="icon-grid"></em><span data-localize="sidebar.nav.ADDRESSES">{{'Addresses'|trans }}</span>
+                    <a  href="#address" title="{{'Addresses'|trans }}" data-toggle="collapse">
+                        <em class="icon-note"></em><span data-localize="sidebar.nav.ADDRESSES">{{'Addresses'|trans }}</span>
                     </a>
+                    <ul class="sidebar-nav sidebar-subnav collapse" id="address">
+                        <li class="sidebar-subnav-header">{{'Addresses'|trans }}</li>
+                        <li class="{% if page_id is defined
+                            and
+                            page_id is not empty
+                            and
+                            page_id =='post_addresses'
+                        %} active {% endif %} ">
+                            <a href="{{ path('post_addresses') }}" title="{{'Addresses List'|trans }}"><span data-localize="sidebar.nav.form.LIST_ADDRESS">{{'Addresses List'|trans }}</span></a>
+                        </li>
+                        <li class="{% if page_id is defined
+                            and
+                            page_id is not empty
+                            and
+                            page_id =='post_address_create'
+                        %} active {% endif %} ">
+                            <a href="{{ path('post_address_create') }}" title="{{'Addresses Create'|trans }}"><span data-localize="sidebar.nav.form.CREATE_ADDRESS">{{'Addresses Create'|trans }}</span></a>
+                        </li>
+                    </ul>
+                </li>
                 </li>
             </ul><!-- END sidebar nav-->
         </nav>
