--- a/templates/security/user_login.html.twig
+++ b/templates/security/user_login.html.twig
@@ -47,7 +47,7 @@
                      </div>
                   </div>
                   <div class="clearfix">
-                     <div class="checkbox c-checkbox float-left mt-0"><label><input type="checkbox" value="" name="remember"><span class="fa fa-check"></span> Remember Me</label></div>
+                     <div class="checkbox c-checkbox float-left mt-0"><label><input type="checkbox" value="" name="remember"><span class="fa fa-check"></span>{{ "Remember Me"|trans }}</label></div>
                      <div class="float-right"><a class="text-muted" href="{{ path('user_logout_fogot_pasword')}}">{{'Forgot your password?'|trans}}</a></div>
                   </div><button class="btn btn-block btn-primary mt-3" type="submit">{{'Login'|trans}}</button>
                </form>
