--- a/templates/cabinet/profile/profile.html.twig
+++ b/templates/cabinet/profile/profile.html.twig
@@ -36,7 +36,7 @@
 
                 <div class="form-group">
                     <div class="offset-5 col-2">
-                        {{ form_row(profileForm.save_avatar, {"label": "Save avatar"|trans}) }}
+                        {{ form_row(profileForm.save_avatar, {"label": "Save"|trans}) }}
                     </div>
                 </div>
             </div>
@@ -138,7 +138,7 @@
                         </div>
                         <div class="form-group">
                             <div class="offset-5 col-2">
-                                {{ form_row(profileForm.save, {"label": "Edit profile"|trans}) }}
+                                {{ form_row(profileForm.save, {"label": "Save"|trans}) }}
                             </div>
                         </div>
                     </div>
