--- a/templates/cabinet/sidebar/navbarright.html.twig
+++ b/templates/cabinet/sidebar/navbarright.html.twig
@@ -64,7 +64,7 @@
                                 {% endif %}
                             </div>
                             <div class="col-md-12">
-                                {{ 'Cabinet' }} : {{ user.id }}
+                                {{"Cabinet"|trans }} : {{ user.id }}
                             </div>
                         </div>
                     </div>
@@ -87,9 +87,9 @@
                 <div class="user-block-info">
                                 <span class="user-block-name">
                                     {% if user.firstName %}
-                                        Hello, {{ user.firstName }}
+                                        {{"Hello"|trans }}, {{ user.firstName }}
                                     {% else %}
-                                        Hello, Somebody
+                                        {{"Hello"|trans }}, Somebody
                                     {% endif %}
                                 </span>
                     {#                                <span class="user-block-role">Designer</span>#}
