--- a/templates/cabinet/cabinet_layout.html.twig
+++ b/templates/cabinet/cabinet_layout.html.twig
@@ -1,4 +1,7 @@
 {% extends 'base.html.twig' %}
+{% block stylesheets %}
+
+{% endblock %}
  {% block body %}
      <!-- top navbar-->
      {{ include('cabinet/sidebar.html.twig') }}      <!-- sidebar-->
