--- a/templates/cabinet/parcels/parcels.html.twig
+++ b/templates/cabinet/parcels/parcels.html.twig
@@ -3,115 +3,50 @@
 {% block title %}{{'Parcels'|trans }}{% endblock %}
 
 {% block content %}
-                        <div class="col-xl-6">
-                            <!-- START card-->
-                            <div class="card card-default">
-                                <div class="card-header"><div class="float-left badge badge-success">Пакунки (0)</div></div>
-                                <div class="card-body">
-                                    <!-- START table-responsive-->
-                                    <div class="table-responsive">
-                                        <table class="table table-striped table-bordered table-hover">
-                                            <thead>
-                                            <tr>
-                                                <th></th>
-{#                                                <th>First Name</th>#}
-{#                                                <th>Last Name</th>#}
-{#                                                <th>Username</th>#}
-                                            </tr>
-                                            </thead>
-                                            <tbody>
-                                            <tr>
-                                                <td>Нет покупок</td>
-{#                                                <td>Mark</td>#}
-{#                                                <td>Otto</td>#}
-{#                                                <td>@mdo</td>#}
-                                            </tr>
-{#                                            <tr>#}
-{#                                                <td>2</td>#}
-{#                                                <td>Jacob</td>#}
-{#                                                <td>Thornton</td>#}
-{#                                                <td>@fat</td>#}
-{#                                            </tr>#}
-{#                                            <tr>#}
-{#                                                <td>3</td>#}
-{#                                                <td>Larry</td>#}
-{#                                                <td>the Bird</td>#}
-{#                                                <td>@twitter</td>#}
-{#                                            </tr>#}
-                                            </tbody>
-                                        </table>
-                                    </div><!-- END table-responsive-->
-                                </div>
-                            </div><!-- END card-->
-                        </div>
-                        <div class="col-xl-6">
-                            <!-- START card-->
-                            <div class="card card-default">
-                                <div class="card-header"><div class="float-left badge badge-success"> Вiдправлення (0)</div></div>
-                                <div class="card-body">
-                                    <!-- START table-responsive-->
-                                    <div class="table-responsive">
-                                        <table class="table table-striped table-bordered table-hover">
-                                            <thead>
-                                                <tr>
-                                                    <th>TN</th>
-                                                    <th>Comment</th>
-                                                    <th>Status</th>
-                                                </tr>
-                                            </thead>
-                                            <tbody>
+    <div class="col-xl-12">
+        <!-- START card-->
+        <div class="card card-default">
+            <div class="card-header">
+                <a  href="{{ path('post_parcels_create') }}" class="float-left badge badge-primary">{{ 'Add order' | trans }}
+                </a>
+            </div>
+            <div class="card-body">
+                <!-- START table-responsive-->
+                <div class="table-responsive">
+                    <table class="table table-striped table-bordered table-hover">
+                        <thead>
+                        <tr>
+                            <th>{{ "trackingNumber" | trans }}</th>
+                            <th>{{ "shipgCost" | trans }}</th>
+                            <th>{{ "Adress" | trans }}</th>
+                            <th></th>
+                        </tr>
+                        </thead>
+                        <tbody>
+                        {% if items is defined and items is iterable  %}
+                            {% for item in items %}
+                                <tr>
+                                    <td>{{ item.trackingNumber }}</td>
+                                    <td>{{ item.shippingCosts }}</td>
+                                    <td>{{ item.addresses.fullAddress }}</td>
+                                    <td><a  href="{{ path('post_parcels_edit',{"id":item.id}) }}" class="btn btn-success">{{ 'Edit Order' | trans }}
+                                        </a></td>
+                                </tr>
+                            {% endfor %}
 
-                                                {% if orders %}
-                                                    {% for order in orders %}
-                                                        <tr>
-                                                            <td>{{ order.trackingNumber }}</td>
-                                                            <td>{{ order.comment }}</td>
-                                                            <td>{{ order.status }}</td>
-                                                        </tr>
-                                                    {% endfor %}
-                                                {% else %}
-                                                    <tr><td>Нет отправок</td></tr>
-                                                {% endif %}
-                                            </tbody>
-                                        </table>
-                                    </div><!-- END table-responsive-->
-                                </div>
-                            </div><!-- END card-->
-                        </div>
-                        <div class="col-xl-6">
-                            <!-- START card-->
-                            <div class="card card-default">
-                                <div class="card-header"><div class="float-left badge badge-success"> Последние платежи (2)</div></div>
-                                <div class="card-body">
-                                    <!-- START table-responsive-->
-                                    <div class="table-responsive">
-                                        <table class="table table-striped table-bordered table-hover">
-                                            <thead>
-                                            <tr>
-                                                <th>Номер рахунку</th>
-                                                <th>Способ оплаты</th>
-                                                <th>Итого</th>
-                                                <th>Статус</th>
-                                            </tr>
-                                            </thead>
-                                            <tbody>
-                                            <tr>
-                                                <td>123456</td>
-                                                <td>Card</td>
-                                                <td>8.00 USD</td>
-                                                <td>Оплачено</td>
-                                            </tr>
-                                            <tr>
-                                                <td>654321</td>
-                                                <td>Card</td>
-                                                <td>16.00 USD</td>
-                                                <td>Оплачено</td>
-                                            </tr>
-                                            </tbody>
-                                        </table>
-                                    </div><!-- END table-responsive-->
-                                </div>
-                            </div><!-- END card-->
-                        </div>
+                        {% else %}
+                            <tr>
+                                <td colspan="3">Нет покупок</td>
+                            </tr>
+                        {% endif %}
+                        </tbody>
+                    </table>
+                </div><!-- END table-responsive-->
+            </div>
+            <div class="col-md-12">
+                {{ knp_pagination_render(items) }}
+            </div>
+        </div><!-- END card-->
+    </div>
 {% endblock %}
  {% block javascripts %}{% endblock %}
